# triangle

./: CMakeLists.txt  CoordSystemExample.cpp  CoordSystemExample.h  Rider_Dark.icls  Shader.cpp  Shader.h  ShaderExample.cpp  ShaderExample.h  Window.cpp  Window.h  idk.h  main.cpp  notes.md  shaders.cpp  shaders.h  texture.cpp  texture.h  textureExample.cpp  textureExample.h  transformationExample.cpp  transformationExample.h  triangle.cpp  triangle.h
include/glad/: glad.h
libs/: glad.txt  glfw3.lib
shaders/: horiShader.frag  horiShader.vert  shader1.vert  shader2.frag  shader2.vert
stb_image/: stb_image.h
